--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://bboxx.workable.com/j/A0EB7EEE88'>BBOXX - Jobs: Embedded Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/careem/jobs/4368458002'>Job Application for Senior Software Engineer (Android) at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -47,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692187708-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692187708-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -151,7 +159,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://quast.workable.com/j/6938090AEB'>Quast Ltd - Jobs: Software Developer x2 - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/6938090AEB'>Quast Ltd - Jobs: Software Developer x2 - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -215,7 +223,7 @@
 <p><span class="badge badge-light">Singapore Singapore Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/druva/2626ab12-e4a3-43fc-9732-b83f39f285ba'>Druva - Senior Software Engineer - Escalations Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/druva/2626ab12-e4a3-43fc-9732-b83f39f285ba'>Druva - Senior Software Engineer - Escalations Engineering</a></h5> 
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -277,7 +285,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://ecosia.workable.com/j/5C4C1BD108'>Ecosia - Jobs: Software Developer: Backend focus - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ecosia.workable.com/j/5C4C1BD108'>Ecosia - Jobs: Software Developer: Backend focus - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -317,11 +325,11 @@
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://miles.applytojob.com/apply/0b8cm0qawa/Software-Engineer-Lead'>Software Engineer (Lead) - Miles Employment Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://miles.applytojob.com/apply/0b8cm0qawa/Software-Engineer-Lead'>Software Engineer (Lead) - Miles Employment Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://miles.applytojob.com/apply/41sbiHajxa/Senior-Software-Engineer'>Senior Software Engineer - Miles Employment Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://miles.applytojob.com/apply/41sbiHajxa/Senior-Software-Engineer'>Senior Software Engineer - Miles Employment Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -333,7 +341,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axoni/e672f1fe-b4fc-42d1-bc54-4dfdc261749b'>Axoni - Software Engineer, P2P Protocol</a></h5> 
+<h5><a href='https://jobs.lever.co/axoni/e672f1fe-b4fc-42d1-bc54-4dfdc261749b'>Axoni - Software Engineer, P2P Protocol</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -345,7 +353,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369020002'>Job Application for Software Engineer - Demand Forecasting at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369020002'>Job Application for Software Engineer - Demand Forecasting at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -357,7 +365,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/VIFQNAz6D4/Backend-Software-EngineerCore-Java'>Backend Software Engineer(Core Java) - Saggezza - Career Page</a></h5> 
+<h5><a href='http://saggezza1.applytojob.com/apply/VIFQNAz6D4/Backend-Software-EngineerCore-Java'>Backend Software Engineer(Core Java) - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -401,7 +409,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oadE9fwU&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nj9ASKw9'>Apttus Careers - Software Engineer, AI</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oadE9fwU&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nj9ASKw9'>Apttus Careers - Software Engineer, AI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -421,7 +429,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zscaler/job/oBKuafwJ'>Zscaler Careers - Sr. Java Software Engineer (Application Security)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zscaler/job/oBKuafwJ'>Zscaler Careers - Sr. Java Software Engineer (Application Security)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -433,14 +441,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Swipii/743999690430567-full-stack-software-developer-40k-to-55k-pa'>Swipii Full Stack Software Developer - ?40k to ?55k pa | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://myndshft.workable.com/j/0EC6400D30'>Myndshft - Jobs: Software Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light">Mesa, Arizona</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://myndshft.workable.com/j/746A422920'>Myndshft - Jobs: Software Engineering Manager - Apply online</a></h5> 
-<p><span class="badge badge-light">Mesa, Arizona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
