--- a/machine.html
+++ b/machine.html
@@ -152,11 +152,11 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=51490faa1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=51490faa1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -173,7 +173,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -201,7 +201,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -218,7 +218,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
 Atypon Systems.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopee/jobs/4008815002'>Job Application for Data Scientist - Language Service/ Machine Learning Platform at Shopee</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopee/jobs/4008815002'>Job Application for Data Scientist - Language Service/ Machine Learning Platform at Shopee</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
